--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "1.0.0-beta.0",
+    "ember-cli-sass": "^5.2.1",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "2.2.1",
