--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
-    "ember-cli": "1.13.13",
+    "ember-cli": "^1.13.13",
     "ember-cli-app-version": "1.0.0",
     "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "git://github.com/rwjblue/ember-cli-content-security-policy.git#master",
@@ -37,6 +37,7 @@
     "ember-data": "2.2.1",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-simple-auth": "1.0.1"
+    "ember-simple-auth": "1.0.1",
+    "ember-test-helpers": "^0.5.19"
   }
 }
