--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.1.2",
-    "ember-cli": "^1.13.13",
-    "ember-cli-app-version": "1.0.0",
-    "ember-cli-babel": "^5.1.3",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-cli": "1.13.15",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "git://github.com/rwjblue/ember-cli-content-security-policy.git#master",
-    "ember-cli-dependency-checker": "^1.0.1",
-    "ember-cli-htmlbars": "1.0.1",
+    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.0",
-    "ember-cli-release": "1.0.0-beta.0",
+    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-release": "0.2.8",
     "ember-cli-sass": "^5.2.1",
-    "ember-cli-sri": "^2.0.0",
+    "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "2.2.1",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
+    "ember-data": "1.13.15",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
     "ember-simple-auth": "1.0.1",
     "ember-test-helpers": "^0.5.19"
   }
