--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-data": "^2.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-resolver": "2.0.3",
     "ember-simple-auth": "1.0.1",
     "ember-sinon": "0.3.0",
     "ember-sinon-qunit": "1.1.0"
